Explain who to send the verification code

--- a/src/app/manage-characters/manage-characters.html
+++ b/src/app/manage-characters/manage-characters.html
@@ -30,7 +30,7 @@
                 </div>
                 @if (!char.verified) {
                 <div class="verification-info">
-                    <p>Send this code in-game to verify:</p>
+                    <p>Send this code in-game to [SKY]Doriath (Server #150) (30310711) to verify:</p>
                     <code class="verification-code">{{ char.verificationCode }}</code>
                 </div>
                 }
