--- a/src/app/user-profile/user-profile.css
+++ b/src/app/user-profile/user-profile.css
@@ -1,12 +1,14 @@
 .user-profile {
   position: relative;
 }
+
 .avatar {
   width: 32px;
   height: 32px;
   border-radius: 50%;
   cursor: pointer;
 }
+
 .dropdown-menu {
   position: absolute;
   top: 100%;
@@ -18,6 +20,7 @@
   min-width: 150px;
   z-index: 1000;
 }
+
 .dropdown-menu a {
   color: #fff;
   text-decoration: none;
@@ -25,6 +28,32 @@
   padding: 8px 12px;
   cursor: pointer;
 }
+
 .dropdown-menu a:hover {
   background-color: #555;
+}
+
+.active-character-info {
+  padding: 10px 15px;
+  border-bottom: 1px solid #444;
+  margin-bottom: 5px;
+}
+
+.active-character-info .label {
+  display: block;
+  font-size: 0.7em;
+  color: #aaa;
+  text-transform: uppercase;
+}
+
+.active-character-info .value {
+  font-weight: bold;
+  color: #00bcd4;
+  display: block;
+}
+
+.active-character-info .server {
+  font-size: 0.8em;
+  color: #888;
+  margin-left: 5px;
 }
